# wbmp

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: test.yml
src/: color.rs  decoder.rs  encoder.rs  error.rs  lib.rs
tests/: decode_images.rs  encode_images.rs
tests/images/: sample_640x426.wbmp
