[package]
name = "wbmp"
license = "MIT OR Apache-2.0"
version = "0.1.0"
description = "WBMP encoder and decoder"
authors = ["shane kenny <shanekenny023@gmail.com>"]
readme = "README.md"
edition = "2021"
include = ["src/**", "LICENSE-*", "README.md"]
keywords = ["image", "wbmp"]
categories = ["multimedia::images", "multimedia::encoding", "encoding"]
repository = "https://github.com/reshane/wbmp"
homepage = "https://github.com/reshane/wbmp"

[dependencies]
